Add missing test cases to increase code coverage